<resources>
    <string name="app_name">TMVolume</string>

    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="address">Addr.</string>
    <string name="port">Port</string>

    <string name="bus">Bus</string>
    <string name="input">Input</string>
    <string name="playback">Playback</string>
    <string name="output">Output</string>

    <string name="object_address">Object Addr.</string>

    <string name="volume_min">Volume Min.</string>
    <string name="volume_max">Volume Max.</string>
    <string name="volume">Volume</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="header_subtitle">Volume controller for TotalMix FX</string>
    <string name="save">Save</string>
    <string name="presets">Presets</string>
    <string name="presets_desc">(long tap to delete preset)</string>
    <string name="show_connection_settings">Show connection settings</string>
</resources>
