<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2,4">

            <TableRow>

                <TextView
                    android:text="@string/client"
                    android:textSize="12sp"
                    android:layout_marginEnd="2dp"
                    />

                <TextView
                    android:text="@string/address"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvClientAddr"
                    android:gravity="center" />

                <TextView
                    android:labelFor="@+id/etClientPort"
                    android:text="@string/port"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etClientPort"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/server"
                    android:textSize="12sp"
                    android:layout_marginEnd="2dp"

                    />

                <TextView
                    android:labelFor="@+id/etServerAddr"
                    android:text="@string/address"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etServerAddr"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="textUri" />

                <TextView
                    android:labelFor="@+id/etServerPort"
                    android:text="@string/port"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etServerPort"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">


            <TableRow>

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/bus"
                    android:textSize="12sp" />

                <RadioGroup android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbBusInput"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input" />

                    <RadioButton
                        android:id="@+id/rbBusPlayback"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playback" />

                    <RadioButton
                        android:id="@+id/rbBusOutput"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/output" />

                </RadioGroup>
            </TableRow>

            <TableRow>

                <TextView
                    android:labelFor="@+id/etObjectAddress"
                    android:text="@string/object_address"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etObjectAddress"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvVolumeVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_max"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvVolumeMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbVolumeMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100000"
            android:min="0"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_min"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvVolumeMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbVolumeMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100000"
            android:min="0"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100000"
            android:min="0"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tvMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>